--- a/earthrovers_ros/package.xml
+++ b/earthrovers_ros/package.xml
@@ -18,6 +18,7 @@
   <exec_depend>python3-requests</exec_depend>
   <exec_depend>python3-yaml</exec_depend>
   <exec_depend>python3-transforms3d</exec_depend>
+  <exec_depend>python3-pyproj</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
