--- a/earthrovers_interfaces/CMakeLists.txt
+++ b/earthrovers_interfaces/CMakeLists.txt
@@ -9,7 +9,16 @@ endif()
 find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "srv/EndMission.srv"
+  "srv/StartMission.srv"
+  "srv/CheckpointReached.srv"
+  "srv/GetCheckpoints.srv"
+  DEPENDENCIES geometry_msgs # GetCheckpoints.srv uses geometry_msgs
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
