Added get_checkpoints service

--- a/earthrovers_interfaces/CMakeLists.txt
+++ b/earthrovers_interfaces/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(ament_cmake REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 find_package(geometry_msgs REQUIRED)
+find_package(geographic_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
@@ -17,7 +18,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/StartMission.srv"
   "srv/CheckpointReached.srv"
   "srv/GetCheckpoints.srv"
-  DEPENDENCIES geometry_msgs # GetCheckpoints.srv uses geometry_msgs
+  DEPENDENCIES geometry_msgs geographic_msgs # GetCheckpoints.srv uses geometry_msgs
 )
 
 if(BUILD_TESTING)
