--- a/earthrovers_interfaces/package.xml
+++ b/earthrovers_interfaces/package.xml
@@ -17,6 +17,8 @@
   <member_of_group>rosidl_interface_packages</member_of_group>
 
   <depend>geometry_msgs</depend>
+  <depend>geographic_msgs</depend>
+  
 
   <export>
     <build_type>ament_cmake</build_type>
