--- a/earthrovers_navigation/package.xml
+++ b/earthrovers_navigation/package.xml
@@ -12,6 +12,15 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <depend>rclpy</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>tf2_ros</depend>
+  <depend>geometry_msgs</depend>
+  <depend>geographic_msgs</depend>
+  <depend>geodesy</depend>
+
   <export>
     <build_type>ament_python</build_type>
   </export>
